Fix bug table overflow on android or small device

--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -248,10 +248,6 @@ html[data-bs-theme="dark"] .modal-footer {
     color: #002155 !important;
 }
 
-.table-responsive {
-    overflow: visible !important;
-}
-
 .pt-30px {
     padding-top: 30px !important;
 }
